# santa

./: tran.py
Santa-2025-Christmas-Tree-Packing-Challenge-main/: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
Santa-2025-Christmas-Tree-Packing-Challenge-main/.github/workflows/: ci.yml
Santa-2025-Christmas-Tree-Packing-Challenge-main/_public_opt/: bbox3.cpp  sa_fast_v2.cpp
Santa-2025-Christmas-Tree-Packing-Challenge-main/configs/: README.md  ensemble.json  submit.json  submit_strong.json
Santa-2025-Christmas-Tree-Packing-Challenge-main/docs/: ensemble.md  l2o.md  overview.md  roadmap.md  sa.md  setup.md
Santa-2025-Christmas-Tree-Packing-Challenge-main/notebooks/: 01_generate_and_score.ipynb  02_optimization_hunt.ipynb  run_l2o.ipynb  run_l2o.py
Santa-2025-Christmas-Tree-Packing-Challenge-main/santa_packing/: __init__.py  __main__.py  blend.py  collisions.py  config.py  constants.py  fastcollide.cpp  geom_np.py  geometry.py  heatmap_meta.py  l2o.py  lattice.py  main.py  meta_init.py  optimizer.py  packing.py  physics.py  postopt_np.py  scoring.py  submission_format.py  tree.py  tree_bounds.py  tree_data.py  workflow.py
Santa-2025-Christmas-Tree-Packing-Challenge-main/scripts/: setup_venv.sh  slice_mother_standalone.py
Santa-2025-Christmas-Tree-Packing-Challenge-main/tests/: test_collisions_jax.py  test_geom_np.py  test_geometry_jax.py  test_optimizer_sa.py  test_scoring_collision.py  test_submission_format.py
kaggle.santa2025-master/: Program.cs  README.md  (+2 more)
santa/: train.py
(+53 files in other folders)
